src/ClassesPanel/ClassesPanel.scss
@import '../palette.scss';

.classes-panel {
    padding: 5rem 0 0 0;
    background-color: $quaternary-color;
    height: 100%;
    flex: auto;

    &__tablinks {
        width: 33.33%;
        height: 3rem;
        background-color: $tertiary-color;
        border: none;
        font-size: 1rem;
        margin: 0;
    }

    &__tablinks:hover {
        background-color: $interactable-hover-color;
    }
}

